==> eboxmaker/eBox_Framework/ebox/hardware/n32g030/Peripherals/ebox_rtc.cpp <==
#include "ebox_rtc.h"
#define debug 0
#define  DEBUG(...) DBG("[RTC]  "),DBG(__VA_ARGS__)
#define  DEBUG(...)
#define RTC_CFG_FLAG 0XA5A5

int Rtc::begin(ClockS clock)
{

    int ret = ENG;
    /* Enable PWR and BKP clocks */
    RCC_APB1PeriphClockCmd(RCC_APB1Periph_PWR | RCC_APB1Periph_BKP, ENABLE);

    PWR_BackupAccessCmd(ENABLE);

    if (clock == clock_lse)
    {
        if ((_getTimeFlag() == 0) || (RCC_GetFlagStatus(RCC_FLAG_LSERDY) == RESET))
        {
            if (_config(clock) != EOK)
            {
                DEBUG("LSE时钟启动失败,使用LSI时钟\n");
                _config(clock_lsi);
            }
        }
        else
        {
            /* Check if the Power On Reset flag is set */
            if (RCC_GetFlagStatus(RCC_FLAG_PORRST) != RESET)
            {
                DEBUG("Power On Reset occurred.... \n");
            }
            /* Check if the Pin Reset flag is set */
            else if (RCC_GetFlagStatus(RCC_FLAG_PINRST) != RESET)
            {
                DEBUG("External Reset occurred....\n ");
            }

            DEBUG("\n No need to configure RTC....");
            DEBUG("\n step 0....");
            /* Wait for RTC registers synchronization */
            RTC_WaitForSynchro();
            /* Enable the RTC Second */
            RTC_ITConfig(RTC_IT_SEC, ENABLE);
            /* Wait until last write operation on RTC registers has finished */
            RTC_WaitForLastTask();
            ret = EOK;
        }

    }
    else
    {
        DEBUG("使用LSI时钟\n");
        ret = _config(clock_lsi);
    }
    rtc_irq_init(Rtc::_irq_handler, (uint32_t)this);
    return ret;
}

int Rtc::_config(ClockS clock)
{
    int ret;
    uint32_t i = 0;
    /* Enable PWR and BKP clocks */
    RCC_APB1PeriphClockCmd(RCC_APB1Periph_PWR | RCC_APB1Periph_BKP, ENABLE);

    /* Allow access to BKP Domain */
    PWR_BackupAccessCmd(ENABLE);

    /* Reset Backup Domain */
    BKP_DeInit();

    if (clock == clock_lse)
    {
        /* Enable LSE */
        RCC_LSEConfig(RCC_LSE_ON);
        /* Wait till LSE is ready */
        while (RCC_GetFlagStatus(RCC_FLAG_LSERDY) == RESET)
        {
            i++;
            if (i >= 0x1fffff)
            {
                ret = ETIMEOUT;
                return ret;
            }
        }
        /* Select LSE as RTC Clock Source */
        RCC_RTCCLKConfig(RCC_RTCCLKSource_LSE);
    }
    else
    {
        RCC_LSICmd(ENABLE);
        /* Wait till LSI is ready */
        while (RCC_GetFlagStatus(RCC_FLAG_LSIRDY) == RESET);
        RCC_RTCCLKConfig(RCC_RTCCLKSource_LSI);
        /* Enable RTC Clock */
        RCC_RTCCLKCmd(ENABLE);
        _setTimeFlag(0xffff);   //清除备份域标志
    }

    /* Wait for RTC registers synchronization */
    RTC_WaitForSynchro();
    /* Wait until last write operation on RTC registers has finished */
    RTC_WaitForLastTask();
    /* Enable the RTC Second */
    RTC_ITConfig(RTC_IT_SEC, ENABLE);

    /* Wait until last write operation on RTC registers has finished */
    RTC_WaitForLastTask();
    if (clock == clock_lse)
    {
        /* Set RTC prescaler: set RTC period to 1sec */
        RTC_SetPrescaler(32767); /* RTC period = RTCCLK/RTC_PR = (32.768 KHz)/(32767+1) */
    }
    else
    {
        /* Set RTC prescaler: set RTC period to 1sec */
        RTC_SetPrescaler(39999); /* RTC period = RTCCLK/RTC_PR = (40 KHz)/(39999+1) */
    }

    /* Wait until last write operation on RTC registers has finished */
    RTC_WaitForLastTask();

    _nvic(ENABLE);
    return EOK;
}

uint8_t Rtc::_getTimeFlag(void)
{
    return (BKP_ReadBackupRegister(BKP_DR1) == RTC_CFG_FLAG);
}

void Rtc::_setTimeFlag(uint16_t configFlag)
{
    BKP_WriteBackupRegister(BKP_DR1, configFlag);
}

void Rtc::setDate(Date_T date)
{
    uint32_t counter_time = 0, counter_alarm = 0, hours = 0;

    /* Change the current date */
    gDate.Year  = date.Year;
    gDate.Month = date.Month;
    gDate.Day  = date.Day;

    /* WeekDay set by user can be ignored because automatically calculated */
    gDate.WeekDay = _RTC_WeekDayNum(gDate.Year, gDate.Month, gDate.Day);
    date.WeekDay = gDate.WeekDay;

    /* Reset time to be aligned on the same day */
    /* Read the time counter*/
    counter_time = _getTimeCounter();

    /* Fill the structure fields with the read parameters */
    hours = counter_time / 3600;
    if (hours > 24)
    {
        /* Set updated time in decreasing counter by number of days elapsed */
        counter_time -= ((hours / 24) * 24 * 3600);
        /* Write time counter in RTC registers */
        _setTimeCounter(counter_time);

        /* Read current Alarm counter in RTC registers */
        counter_alarm = _getAlarmCounter();

        /* Set again alarm to match with new time if enabled */
        if (counter_alarm != (uint32_t)0xFFFFFFFF)
        {
            if (counter_alarm < counter_time)
            {
                /* Add 1 day to alarm counter*/
                counter_alarm += (uint32_t)(24 * 3600);
                RTC_WaitForLastTask();
                RTC_SetAlarm(counter_alarm);
            }
        }

    }

}

void Rtc::setTime(Time_T time)
{
    uint32_t counter_time = 0;

    counter_time = (uint32_t)(((uint32_t)time.Hours * 3600) + \
                              ((uint32_t)time.Minutes * 60) + \
                              ((uint32_t)time.Seconds));
    /* Wait for RTC registers synchronization */
    RTC_WaitForSynchro();
    /* Wait until last write operation on RTC registers has finished */
    RTC_WaitForLastTask();
    _setTimeCounter(counter_time);
    _setTimeFlag(RTC_CFG_FLAG);
}

void Rtc::setAlarm(Time_T alarm, uint32_t mask)
{
    uint32_t counter_alarm = 0, counter_time;
    Time_T _time;

    counter_alarm = (uint32_t)(((uint32_t)alarm.Hours * 3600) + \
                               ((uint32_t)alarm.Minutes * 60) + \
                               ((uint32_t)alarm.Seconds));

    /*GetTime function to update date if counter higher than 24 hours */
    getTime(&_time);
    /* Convert time in seconds */
    counter_time = (uint32_t)(((uint32_t)_time.Hours * 3600) + \
                              ((uint32_t)_time.Minutes * 60) + \
                              ((uint32_t)_time.Seconds));

    /* Check that requested alarm should expire in the same day (otherwise add 1 day) */
    if (counter_alarm < counter_time)
    {
        /* Add 1 day to alarm counter*/
        counter_alarm += (uint32_t)(24 * 3600);
    }
    //    RTC_WaitForSynchro();
    /* Wait until last write operation on RTC registers has finished */
    RTC_WaitForLastTask();
    RTC_SetAlarm(counter_alarm);
}

void Rtc::setInterrupt(FunctionalState state, Rtc_IrqType type)
{
    /* Wait for RTC registers synchronization */
    RTC_WaitForSynchro();
    /* Wait until last write operation on RTC registers has finished */
    RTC_WaitForLastTask();

    (state == ENABLE) ? (RTC->CRH |= (1 << type)) : (RTC->CRH &= ~(1 << type));
    _nvic(state);
}

void Rtc::getTime(Time_T *time)
{
    uint32_t counter_time = 0, counter_alarm = 0, days_elapsed = 0, hours = 0;

    /* Wait for RTC registers synchronization */
    RTC_WaitForSynchro();
    /* Wait until last write operation on RTC registers has finished */
    RTC_WaitForLastTask();

    counter_time = _getTimeCounter();

    /* Fill the structure fields with the read parameters */
    hours = counter_time / 3600;
    time->Minutes  = (uint8_t)((counter_time % 3600) / 60);
    time->Seconds  = (uint8_t)((counter_time % 3600) % 60);

    if (hours >= 24)
    {
        /* Get number of days elapsed from last calculation */
        days_elapsed = (hours / 24);
        /* Set Hours in RTC_TimeTypeDef structure*/
        time->Hours = (hours % 24);
        /* Read Alarm counter in RTC registers */
        counter_alarm = _getAlarmCounter() ;

        /* 计算alarm剩余时间 (only if set and not yet expired)*/
        if ((counter_alarm != (uint32_t)0xFFFFFFFF) && (counter_alarm > counter_time))
        {
            counter_alarm -= counter_time;
        }
        else
        {
            /* 如果 counter_alarm < counter_time ，alarm 已经发生且没有解除*/
            counter_alarm = (uint32_t)0xFFFFFFFF;
        }

        /* Set updated time in decreasing counter by number of days elapsed */
        counter_time -= (days_elapsed * 24 * 3600);
        /* Write time counter in RTC registers */
        RTC_SetCounter(counter_time);


        /* Set updated alarm to be set */
        if (counter_alarm != (uint32_t)0xFFFFFFFF)
        {
            counter_alarm += counter_time;
        }
        /* Write time counter in RTC registers */
        RTC_WaitForLastTask();
        RTC_SetAlarm(counter_alarm);

        /* Update date */
        _updateDate(days_elapsed);
    }
    else
    {
        time->Hours = hours;
    }

    time->Format12_24 = 0;
}

void Rtc::_setTimeCounter(uint32_t count)
{
    /* Wait until last write operation on RTC registers has finished */
    RTC_WaitForLastTask();
    /* Change the current time */
    RTC_SetCounter(count);
}

    void RTC_IRQHandler(void)
    {
        if (RTC_GetITStatus(RTC_IT_SEC) != RESET)
        {
            irq_handler(rtc_irq_id, Sec_Irq);
            RTC_ClearITPendingBit(RTC_IT_SEC);
        }
        if (RTC_GetITStatus(RTC_IT_ALR) != RESET)
        {
            irq_handler(rtc_irq_id, Alr_Irq);
            RTC_ClearITPendingBit(RTC_IT_ALR);
        }
        if (RTC_GetITStatus(RTC_IT_OW) != RESET)
        {
            irq_handler(rtc_irq_id, Ow_Irq);
            RTC_ClearITPendingBit(RTC_IT_OW);
        }
    }
